--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.5.0",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
   },
