--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "KByteGt",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
