--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
+    "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
